Rectified all pages fonts + padding + position

--- a/src/index.css
+++ b/src/index.css
@@ -70,49 +70,11 @@ code {
 
 @import url("https://fonts.cdnfonts.com/css/mortend");
 
-/* .loading-page.loaded {
-	display: none;
+
+.navbar{
+  top:0;
+  z-index: 1000;
 }
-.loading-page {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 100;
-	font-family: "Mortend", sans-serif !important;
-}
-.loading-page-grey,
-.loading-page-white {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-.loading-page-grey {
-	z-index: 2;
-	background-color: #000000;
-}
-.loading-page-white {
-	z-index: 1;
-	background-color: white;
-}
-.loading-page-text-wrap {
-	overflow: hidden;
-}
-.loading-page-text-wrap {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: white;
-	font-size: 70px;
-	z-index: 3;
-}
-.loading-page-text span {
-	display: inline-block;
-} */
 
 .fw-bold {
 	font-family: GilroyBold !important;
@@ -120,8 +82,18 @@ code {
 
 .transparent-white {
 	background-color: transparent !important;
-	/* backdrop-filter: blur(13px);
-    -webkit-backdrop-filter: blur(13px); */
+}
+
+.mt-6 {
+	margin-top: 6rem;
+}
+
+.mt-10 {
+	margin-top: 10rem;
+}
+
+.display-3 {
+	font-size: 65px !important;
 }
 
 .sticky {
@@ -135,6 +107,45 @@ code {
 		0 0px 0px 0px rgba(0, 0, 0, 0.1) !important;
 }
 
+.p-navbar {
+	padding: 2rem 5rem 0rem 7rem !important;
+}
+
+.mt-12 {
+	margin-top: 12rem;
+}
+
+.mt-20 {
+	margin-top: 24rem;
+}
+
+.mt-25 {
+	margin-top: 35rem;
+}
+
+
+@media (max-width: 600px) {
+	.mt-10 {
+		margin-top: 6.7rem;
+	}
+
+	.mt-12 {
+		margin-top: 12rem;
+	}
+
+    .mt-20, .mt-20-mobile {
+        margin-top: 8rem;
+    }
+
+    .mt-25 {
+        margin-top: 5rem;
+    }
+
+	.p-navbar {
+		padding: 1.7rem 1.5rem 0rem 1.5rem !important;
+	}
+}
+
 .showcase {
 	background: var(--primary-color);
 	color: #fff;
@@ -144,7 +155,8 @@ code {
 
 .showcase:before {
 	content: "";
-	background: url("https://images.pexels.com/photos/533923/pexels-photo-533923.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat center center/cover;
+	background: url("https://images.pexels.com/photos/533923/pexels-photo-533923.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+		no-repeat center center/cover;
 	position: absolute;
 	top: 0;
 	left: 100;
@@ -194,15 +206,12 @@ code {
 
 .menu-wrap {
 	position: fixed;
-	top: 0;
-	left: 0;
 	z-index: 1;
+	margin-top: -4rem !important;
 }
 
 .menu-wrap .toggler {
 	position: absolute;
-	top: 0;
-	left: 0;
 	z-index: 2;
 	cursor: pointer;
 	width: 50px;
@@ -212,8 +221,8 @@ code {
 
 .menu-wrap .hamburger {
 	position: absolute;
-	top: 0;
-	left: 0;
+	/* top: 0;
+	left: 0; */
 	z-index: 1;
 	width: 60px;
 	height: 60px;
@@ -225,7 +234,7 @@ code {
 }
 
 /* Hamburger Line */
-.menu-wrap .hamburger>div {
+.menu-wrap .hamburger > div {
 	position: relative;
 	flex: none;
 	width: 100%;
@@ -238,8 +247,8 @@ code {
 }
 
 /* Hamburger Lines - Top & Bottom */
-.menu-wrap .hamburger>div::before,
-.menu-wrap .hamburger>div::after {
+.menu-wrap .hamburger > div::before,
+.menu-wrap .hamburger > div::after {
 	content: "";
 	position: absolute;
 	z-index: 1;
@@ -250,38 +259,38 @@ code {
 }
 
 /* Moves Line Down */
-.menu-wrap .hamburger>div::after {
+.menu-wrap .hamburger > div::after {
 	top: 10px;
 }
 
 /* Toggler Animation */
-.menu-wrap .toggler:checked+.hamburger>div {
+.menu-wrap .toggler:checked + .hamburger > div {
 	transform: rotate(135deg);
 }
 
 /* Turns Lines Into X */
-.menu-wrap .toggler:checked+.hamburger>div:before,
-.menu-wrap .toggler:checked+.hamburger>div:after {
+.menu-wrap .toggler:checked + .hamburger > div:before,
+.menu-wrap .toggler:checked + .hamburger > div:after {
 	top: 0;
 	transform: rotate(90deg);
 }
 
 /* Rotate On Hover When Checked */
-.menu-wrap .toggler:checked:hover+.hamburger>div {
+.menu-wrap .toggler:checked:hover + .hamburger > div {
 	transform: rotate(225deg);
 }
 
 /* Show Menu */
-.menu-wrap .toggler:checked~.menu {
+.menu-wrap .toggler:checked ~ .menu {
 	visibility: visible;
 }
 
-.menu-wrap .toggler:checked~.menu>div {
+.menu-wrap .toggler:checked ~ .menu > div {
 	transform: scale(1);
 	transition-duration: var(--menu-speed);
 }
 
-.menu-wrap .toggler:checked~.menu>div>div {
+.menu-wrap .toggler:checked ~ .menu > div > div {
 	opacity: 1;
 	transition: opacity 0.4s ease 0.4s;
 }
@@ -297,14 +306,13 @@ code {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-
 }
 
-.menu-wrap .menu>div {
+.menu-wrap .menu > div {
 	background: var(--overlay-color);
-	border-radius: 50%;
+	/* border-radius: 50%; */
 	width: 200vw;
-	height: 200vw;
+	height: 100%;
 	display: flex;
 	flex: none;
 	align-items: center;
@@ -313,7 +321,7 @@ code {
 	transition: all 0.4s ease;
 }
 
-.menu-wrap .menu>div>div {
+.menu-wrap .menu > div > div {
 	text-align: center;
 	max-width: 90vw;
 	max-height: 100vh;
@@ -321,60 +329,60 @@ code {
 	transition: opacity 0.4s ease;
 }
 
-.menu-wrap .menu>div>div>ul>li {
+.menu-wrap .menu > div > div > ul > li {
 	list-style: none;
 	color: #fff;
 	font-size: 1.5rem;
 	padding: 1rem;
 }
 
-.menu-wrap .menu>div>div>ul>li>a {
+.menu-wrap .menu > div > div > ul > li > a {
 	color: inherit;
 	text-decoration: none;
 	transition: color 0.4s ease;
 	font-size: 30px;
 }
 
-.menu-wrap .menu>div>div>ul>li>a:hover {
+.menu-wrap .menu > div > div > ul > li > a:hover {
 	color: var(--secondary-color);
 }
 
-.menu-wrap .menu>div>div>ul>li:hover {
+.menu-wrap .menu > div > div > ul > li:hover {
 	opacity: 0;
 	transition: opacity 2s ease;
 }
 
-.menu-wrap .menu>div>div>ul>li:nth-child(1) {
+.menu-wrap .menu > div > div > ul > li:nth-child(1) {
 	transition-delay: 0.6s;
 	opacity: 1;
 }
 
-.menu-wrap .menu>div>div>ul>li:nth-child(2) {
+.menu-wrap .menu > div > div > ul > li:nth-child(2) {
 	transition-delay: 0.8s;
 	opacity: 1;
 }
 
-.menu-wrap .menu>div>div>ul>li:nth-child(3) {
+.menu-wrap .menu > div > div > ul > li:nth-child(3) {
 	transition-delay: 1s;
 	opacity: 1;
 }
 
-.menu-wrap .menu>div>div>ul>li:nth-child(4) {
+.menu-wrap .menu > div > div > ul > li:nth-child(4) {
 	transition-delay: 1.2s;
 	opacity: 1;
 }
 
-.menu-wrap .menu>div>div>ul>li:nth-child(5) {
+.menu-wrap .menu > div > div > ul > li:nth-child(5) {
 	transition-delay: 1.4s;
 	opacity: 1;
 }
 
-.menu-wrap .menu>div>div>ul>li:nth-child(6) {
+.menu-wrap .menu > div > div > ul > li:nth-child(6) {
 	transition-delay: 1.6s;
 	opacity: 1;
 }
 
-.menu-wrap .menu>div>div>ul>li:nth-child(7) {
+.menu-wrap .menu > div > div > ul > li:nth-child(7) {
 	transition-delay: 1.8s;
 	opacity: 1;
 }
@@ -402,18 +410,6 @@ code {
 
 .fade-in-text.delayed1 {
 	animation-delay: 1.4s;
-}
-
-.mt-6 {
-	margin-top: 6rem;
-}
-
-.mt-10 {
-	margin-top: 10rem;
-}
-
-.display-3 {
-	font-size: 65px !important;
 }
 
 .hero-hr {
@@ -501,7 +497,7 @@ code {
 	overflow-x: hidden;
 }
 
-.container-lg{
+.container-lg {
 	padding-bottom: 30px;
 	margin-bottom: 30px;
 }
@@ -555,77 +551,32 @@ code {
 
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-/* span {
-  font-family: 'Bebas Neue', cursive;
-  font-size: 60px;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background-image: linear-gradient(rgb(123, 0, 255), rgb(123, 0, 255));
-  background-size: 100% 10px;
-  background-repeat: no-repeat;
-  background-position: 100% 0%;
-  transition: background-size .7s, background-position .5s ease-in-out;
-  color: white;
-}
-
-span:hover {
-	background-size: 100% 100%;
-	background-position: 0% 100%;
-	transition: background-position 0.7s, background-size 0.5s ease-in-out;
-}
-
-@media (max-width: 600px) {
-	span {
-		font-size: 2rem;
-		top: 20%;
-		background-size: 100% 5px;
-	}
-    .mt-10{
-        margin-top: 6.7rem;
-    }
-}
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 /* Schedule */
 
-* {
-	box-sizing: border-box;
-}
-
-html {
-	font-size: 14px;
-}
-
-body {
-	background: #181818;
-	font-family: "Open Sans", sans-serif;
-	color: #ffffff;
-}
-
-.scheduletext {
-	padding-top: 180px;
-	text-align: center;
-	font-size: 5rem;
-	color: white;
-}
-
-@media only screen and (max-width: 600px) {
-	.scheduletext {
-		font-size: 3rem;
-		/* adjust as needed */
-	}
+.sch {
+	position: fixed;
+	right: -32%;
+	bottom: -24%;
+    top: -10%;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	margin: auto;
+	z-index: -100;
 }
 
 .timeline {
 	display: flex;
 	flex-direction: column;
-	margin: 100px auto;
-	position: relative;
+	/* margin: 100px auto; */
+	/* position: relative; */
 	height: calc(100vh);
-	width: 100%;
+	/* width: 100%; */
+    z-index: -1 !important;
+
 }
 
 .timeline__event {
@@ -635,7 +586,7 @@ body {
 	margin: 20px 0;
 	border-radius: 6px;
 	align-self: center;
-	width: 50vw;
+	width: cal(50vw);
 }
 
 .timeline__event:nth-child(2n + 1) {
@@ -654,8 +605,7 @@ body {
 	content: "";
 	width: 2px;
 	height: 100%;
-	background: #6c2e84
-;
+	background: #6c2e84;
 	position: absolute;
 	top: 0%;
 	left: 50%;
@@ -669,8 +619,7 @@ body {
 	content: "";
 	width: 100%;
 	height: 2px;
-	background: #6c2e84
-;
+	background: #6c2e84;
 	position: absolute;
 	right: 0;
 	z-index: -1;
@@ -700,8 +649,7 @@ body {
 }
 
 .timeline__event__date {
-	color: white
-;
+	color: white;
 	font-size: 1.5rem;
 	font-weight: 600;
 	background: #9251ac;
@@ -721,8 +669,7 @@ body {
 	padding: 20px;
 	align-self: center;
 	margin: 0 20px;
-	background: #6c2e84
-;
+	background: #6c2e84;
 	border-radius: 100%;
 	width: 40px;
 	box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
@@ -741,8 +688,7 @@ body {
 	content: "";
 	width: 2px;
 	height: 100%;
-	background: #6c2e84
-;
+	background: #6c2e84;
 	position: absolute;
 	top: 0%;
 	z-index: -1;
@@ -755,8 +701,7 @@ body {
 	content: "";
 	width: 100%;
 	height: 2px;
-	background: #6c2e84
-;
+	background: #6c2e84;
 	position: absolute;
 	left: 0%;
 	z-index: -1;
@@ -767,6 +712,7 @@ body {
 
 .timeline__event__description {
 	flex-basis: 60%;
+    color: black;
 }
 
 .timeline__event--type2:after {
@@ -923,7 +869,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	margin-top: 150px;
 }
 .wcontainer .wcard {
 	position: relative;
@@ -1072,18 +1017,12 @@ body {
 	filter: grayscale(0);
 }
 
-
-
-
 .wcontainer .wcard2 .pic {
 	background-image: url("https://images.unsplash.com/photo-1528785198459-ec50485704c7?ixlib=rb-0.3.5&s=3a2fc3039516555bbb2e9cd2967bd321&auto=format&fit=crop&w=1537&q=80");
 }
 .wcontainer .wcard2 button {
 	background-color: #2b26c3;
 }
-
-
-
 
 .wcontainer .wcard3 .pic {
 	background-image: url("https://images.unsplash.com/photo-1525543907410-b2562b6796d6?ixlib=rb-0.3.5&s=9ff8e5e718a6a40cbd0e14");
@@ -1092,8 +1031,6 @@ body {
 	background-color: #2b26c3;
 }
 
-
-
 .wcontainer .wcard4 .pic {
 	background-image: url("https://images.unsplash.com/photo-1528785198459-ec50485704c7?ixlib=rb-0.3.5&s=3a2fc3039516555bbb2e9cd2967bd321&auto=format&fit=crop&w=1537&q=80");
 }
@@ -1101,28 +1038,12 @@ body {
 	background-color: #2b26c3;
 }
 
-
-
 .dr {
 	position: absolute;
 	bottom: 16px;
 	right: 16px;
 	width: 100px;
 }
-
-.wtext h1 {
-	color: white;
-	text-align: center;
-	font-size: 60px;
-	margin: 200px auto;
-	width: 100%;
-}
-
-@media only screen and (max-width: 768px) {
-	.wtext h1 {
-	  margin-top: 100px;
-	}
-  }
 
 .properties {
 	display: flex;
@@ -1146,65 +1067,62 @@ body {
 }
 
 /* events page */
-:root{
+:root {
 	--background-dark: black;
-	--text-light: rgba(255,255,255,0.6);
-	--text-lighter: rgba(255,255,255,0.9);
+	--text-light: rgba(255, 255, 255, 0.6);
+	--text-lighter: rgba(255, 255, 255, 0.9);
 	--spacing-s: 8px;
 	--spacing-m: 16px;
 	--spacing-l: 24px;
 	--spacing-xl: 32px;
 	--spacing-xxl: 64px;
 	--width-container: 1200px;
-  }
-  
-  
-  .hero-section{
+}
+
+.hero-section {
 	align-items: flex-start;
 	display: flex;
 	min-height: 100%;
 	justify-content: center;
 	padding: var(--spacing-xxl) var(--spacing-l);
 	background: black;
-  }
-  
-  .card-grid{
+}
+
+.card-grid {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	max-width: var(--width-container);
 	width: 100%;
-	gap:30px;
+	gap: 30px;
 	background: black;
+}
 
-  }
-  
-  @media(min-width: 540px){
-	.card-grid{
-	  grid-template-columns: repeat(2, 1fr); 
+@media (min-width: 540px) {
+	.card-grid {
+		grid-template-columns: repeat(2, 1fr);
 	}
-  }
-  
-  @media(min-width: 960px){
-	.card-grid{
-	  grid-template-columns: repeat(4, 1fr); 
+}
+
+@media (min-width: 960px) {
+	.card-grid {
+		grid-template-columns: repeat(3, 1fr);
 	}
-  }
-  
-  .card_event{
+}
+
+.card_event {
 	list-style: none;
 	position: relative;
 	background: black;
-  }
-  
-  .card_event:before{
-	content: '';
+}
+
+.card_event:before {
+	content: "";
 	display: block;
 	padding-bottom: 150%;
 	width: 100%;
-	
-  }
-  
-  .card__background{
+}
+
+.card__background {
 	background-size: cover;
 	background-position: center;
 	border-radius: var(--spacing-l);
@@ -1217,58 +1135,56 @@ body {
 	transform-origin: center;
 	background-image: url(https://images.unsplash.com/photo-1675095524926-f1a8581615d9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1528&q=80);
 	transform: scale(1) translateZ(0);
-	transition: 
-	  filter 200ms linear,
-	  transform 200ms linear;
-  }
-  
-  .card_event:hover .card__background{
+	transition: filter 200ms linear, transform 200ms linear;
+}
+
+.card_event:hover .card__background {
 	transform: scale(1.05) translateZ(0);
-  }
-  
-  .card-grid:hover > .card_event:not(:hover) .card__background{
-	filter: brightness(1) saturate(0)  blur(2px);
-  }
-  
-  .card__content{
+}
+
+.card-grid:hover > .card_event:not(:hover) .card__background {
+	filter: brightness(1) saturate(0) blur(2px);
+}
+
+.card__content {
 	left: 0;
 	padding: var(--spacing-l);
 	position: absolute;
 	top: 0;
-  }
-  
-  .card__category{
+}
+
+.card__category {
 	color: var(--text-light);
 	font-size: 0.9rem;
 	margin-bottom: var(--spacing-s);
 	text-transform: uppercase;
-  }
-  
-  .card__heading{
+}
+
+.card__heading {
 	color: var(--text-lighter);
 	font-size: vh;
-	text-shadow: 2px 2px 20px rgba(0,0,0,0);
+	text-shadow: 2px 2px 20px rgba(0, 0, 0, 0);
 	line-height: 1.4;
 	word-spacing: 100vw;
-  }
+}
 
-  @media screen and (min-width: 601px) {
+@media screen and (min-width: 601px) {
 	.card__heading {
-	  font-size: 4vh;
+		font-size: 4vh;
 	}
 	.card__category {
 		font-size: 3vh;
-	  }
-  }
-  
-  @media screen and (max-width: 600px) {
+	}
+}
+
+@media screen and (max-width: 600px) {
 	.card__heading {
-	  font-size: 2vh;
+		font-size: 2vh;
 	}
 	.card__category {
 		font-size: 2vh;
-	  }
-  }
+	}
+}
 .modal-header {
 	border-color: white;
 }
@@ -1346,7 +1262,6 @@ body {
 .contents li a {
 	color: #584a46;
 	text-decoration: none;
-
 }
 
 .contents li {
@@ -1368,79 +1283,49 @@ body {
 	z-index: -100;
 }
 
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+@media (max-width: 600px) {
+	.overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 120vh;
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+}
+
 /* about taqneeq */
 .main-tq {
 	width: 100%;
 	height: 100vh;
 	overflow-y: hidden;
 	position: relative;
-  }
-  .main-tq video {
+}
+.main-tq video {
 	width: 100%;
 	height: auto;
 	min-height: 100%;
 	object-fit: cover;
-  }
-  .Content-main-tq {
-	position: absolute;
-	width: 50%;
-	left: 25%;
-	height: 100%;
-	top: 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	color: white;
-	text-align: center;
-  }
+}
 
-  .overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, .4);
-  }
-  
-  .Content-main-tq p {
-	text-align: center;
-	margin: 0;
-	font-size: 1.4rem;
-  }
-  
-  .Content-main-tq h1 {
-	text-align: center;
-	margin: 0;
-	font-size: 2.5rem;
-  }
-
-  @media (max-width: 750px) {
-	.Content-main-tq p {
-		text-align: center;
-		margin: 0;
-		font-size: 0.9rem;
-	  }
-	  
-	  .Content-main-tq h1 {
-		text-align: center;
-		margin: 0;
-		font-size: 1.5rem;
-	  }
-  }
-
-
-  .sch {
+.bgvideolg {
 	position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  }
-  .sch video {
-	width: 100%;
-	height: auto;
+	/* right: -32%; */
+	bottom: -24%;
+    top: -10%;
+	min-width: 100%;
 	min-height: 100%;
-	object-fit: cover;
-  }
+	width: auto;
+	height: auto;
+	margin: auto;
+	z-index: -100;
+}
